--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-json-view-lite": "^2.4.1",
     "react-use-websocket": "^4.13.0",
+    "serve": "^14.2.4",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
